Add image for hero section

--- a/components/hero.html
+++ b/components/hero.html
@@ -1,2 +1,7 @@
 <img src="assets/img/hero-left.svg" alt="">
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quos?</p>
+<div class="1">
+    <div class="2">
+        <img src="" alt="" class="i">
+    </div>
+</div>
